 * no warnings when running setup.py without installed setuptools (#262)
 * modified Locale.__eq__ method so Locales are only equal if all of their
   attributes (language, territory, script, variant) are equal
 * resort to hard-coded message extractors/checkers if pkg_resources is 
   installed but no egg-info was found (#230)
 * format_time() and format_datetime() now accept also floats (#242)


Version 0.9.6
http://svn.edgewall.org/repos/babel/tags/0.9.6/
(Mar 17 2011, from branches/stable/0.9.x)

 * Backport r493-494: documentation typo fixes.
 * Make the CLDR import script work with Python 2.7.
 * Fix various typos.
 * Fixed Python 2.3 compatibility (ticket #146, #233).
 * Sort output of list-locales.
 * Make the POT-Creation-Date of the catalog being updated equal to
   POT-Creation-Date of the template used to update (ticket #148).
 * Use a more explicit error message if no option or argument (command) is
   passed to pybabel (ticket #81).
 * Keep the PO-Revision-Date if it is not the default value (ticket #148).
 * Make --no-wrap work by reworking --width's default and mimic xgettext's
   behaviour of always wrapping comments (ticket #145).
 * Fixed negative offset handling of Catalog._set_mime_headers (ticket #165).
 * Add --project and --version options for commandline (ticket #173).
 * Add a __ne__() method to the Local class.
 * Explicitly sort instead of using sorted() and don't assume ordering
   (Python 2.3 and Jython compatibility).
 * Removed ValueError raising for string formatting message checkers if the
   string does not contain any string formattings (ticket #150).
 * Fix Serbian plural forms (ticket #213).
 * Small speed improvement in format_date() (ticket #216).
 * Fix number formatting for locales where CLDR specifies alt or draft 
   items (ticket #217)
 * Fix bad check in format_time (ticket #257, reported with patch and tests by 
   jomae)
 * Fix so frontend.CommandLineInterface.run does not accumulate logging 