@@ -52,6 +52,8 @@ http://svn.edgewall.org/repos/babel/tags/1.0.0/
  * resort to hard-coded message extractors/checkers if pkg_resources is 
    installed but no egg-info was found (#230)
  * format_time() and format_datetime() now accept also floats (#242)
+ * add babel.support.NullTranslations class similar to gettext.NullTranslations
+   but with all of Babel's new *gettext methods (#277)
 
 
 Version 0.9.6
